top bar links container added (BUFF-334)

--- a/public/login_success.html
+++ b/public/login_success.html
@@ -126,6 +126,9 @@
         <script>
             (function() {
                 localStorage.setItem('buff-external-auth', window.location.search);
+                setTimeout(() => {
+                    window.close();
+                }, 3000);
             })();
         </script>
     </body>
